# claude-marketplace

./: .gitignore  ANALYSIS_AND_IMPROVEMENTS.md  ANALYSIS_README.md  BEFORE_AFTER_COMPARISON.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN_V2.md  IMPROVEMENTS_SUMMARY.md  README.md  RELEASE_NOTES_v2.1.0.md  START_HERE.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
odoo-doodba-dev/: CHANGELOG.md  CLAUDE.md  ERRORS.md  FIXES_SUMMARY.md  GHOST_MODULE_FIX.md  INDEXER_INTEGRATION.md  MIGRATION.md  README.md  SKILLS.md  START_HERE.md  TEST_CHECKLIST.md  USAGE_GUIDE.md  XPATH_VALIDATION_FIX.md
odoo-doodba-dev/.claude-plugin/: plugin.json
odoo-doodba-dev/agents/: odoo-analyst.md  odoo-developer.md  odoo-documenter.md  odoo-implementer.md  odoo-setup.md  odoo-tester.md  odoo-validator.md  odoo-verifier.md
odoo-doodba-dev/commands/: odoo-addons.md  odoo-dev.md  odoo-info.md  odoo-logs.md  odoo-scaffold.md  odoo-search.md  odoo-setup.md  odoo-shell.md  odoo-test.md  odoo-validate.md  odoo-workflow.md  reasoningbank.md
odoo-doodba-dev/docs/: AGENT-MEMORY-SYSTEM.md
odoo-doodba-dev/skills/memory/: README.md  SKILL.md  pyproject.toml
odoo-doodba-dev/skills/memory/scripts/: __init__.py  clear.py  config.py  database.py  get_context.py  list_memory.py  store.py
odoo-doodba-dev/skills/memory/tools/: README.md  export.sh  import.sh  list.sh  retrieve.sh  store.sh
odoo-doodba-dev/skills/odoo-indexer/: .odoo_context.json.example  README.md  SETUP_IMPROVEMENTS.md  SKILL.md  pyproject.toml
odoo-doodba-dev/skills/odoo-indexer/scripts/: database.py  env_check.py  find_refs.py  get_context.py  get_details.py  health_check.py  index_status.py  list_modules.py  module_stats.py  query_shared.py  run.sh  search.py  search_by_attr.py  search_xml_id.py  setup.sh  tools.py  update_index.py
odoo-doodba-dev/skills/odoo-indexer/tools/: README.md  get_context.sh  get_model_details.sh  search_model.sh  search_xml_id.sh  validate_field.sh
odoo-doodba-dev/skills/reasoningbank/: CENTRALIZED_DESIGN.md  CENTRAL_README.md  README.md  SKILL.md  config.yaml  pyproject.toml
odoo-doodba-dev/workflows/templates/: SPEC-template.md  TEST-REPORT-template.md  VALIDATION-template.md
plugins/odoo-development/: SKILL.md
plugins/odoo-development/.claude-plugin/: plugin.json
plugins/odoo-development/agents/: odoo-code-reviewer.md  odoo-skill-finder.md
plugins/odoo-development/commands/: odoo-module.md  odoo-review.md  odoo-test.md
plugins/odoo-development/skills/: constraint-patterns.md  data-migration-patterns.md  inheritance-patterns.md  mail-notification-patterns.md  odoo-security-guide-14.md  odoo-security-guide-15.md  odoo-security-guide-16.md  (+8 more)
plugins/odoo-doodba-dev/: CHANGELOG.md  CLAUDE.md  INSTALLATION.md  README.md
plugins/odoo-doodba-dev/skills/reasoningbank/: pyproject.toml
plugins/odoo-doodba-dev/skills/reasoningbank/scripts/: matts.py  post_hook.py
plugins/odoo-doodba-dev/skills/reasoningbank/scripts/utils/: pii.py
plugins/odoo-query/: CLAUDE.md  SKILL.md
plugins/odoo-token-killer/: CLAUDE.md  README.md
plugins/odoo-token-killer/skills/otk-core/: Cargo.toml  SKILL.md  pyproject.toml
plugins/odoo-token-killer/skills/otk-core/scripts/: __init__.py  cli.py  filters.py  tracking.py
plugins/odoo-token-killer/skills/otk-core/src/: filters.rs  tee.rs
plugins/odoo-token-killer/skills/otk-core/tools/: otk-gain.sh  otk.sh
(+57 files in other folders)
