[project]
name = "claude-memory-skill"
version = "1.0.0"
description = "Persistent project memory for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Letzdoo (Jerome Sonnet)"}
]

dependencies = []

[project.scripts]
memory-store = "scripts.store:main"
memory-retrieve = "scripts.retrieve:main"
memory-search = "scripts.search:main"
memory-list = "scripts.list_memory:main"
memory-clear = "scripts.clear:main"
memory-export = "scripts.export_memory:main"
memory-import = "scripts.import_memory:main"
memory-context = "scripts.get_context:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
